# LeagueCastAssist

./: .gitattributes  .gitignore  DESIGN.md  LICENSE  LeagueCastAssist.spec  README.md  SECURITY.md  build.ps1  pyproject.toml
.github/workflows/: ci.yml  release.yml
release/: release
src/league_cast_assist/: __init__.py  app.py  config.py  logging_config.py  models.py  resources.py  update.py
src/league_cast_assist/data/: __init__.py  ability_math.py  asset_resolver.py  client_discovery.py  controller.py  lcu_client.py  live_client.py  match_state.py  simulation.py  static_data.py  tooltip_formatter.py
src/league_cast_assist/tools/: audit_ability_text.py  audit_item_text.py  validate_static_data.py
src/league_cast_assist/ui/: debug_dialog.py  detail_panel.py  graph.py  image_loader.py  main_window.py  onboarding.py  settings_dialog.py  widgets.py  workers.py
src/leaguecastassist_updater/: __init__.py  updater.py
tests/: test_config.py  test_graph.py  test_hardening.py  test_item_audit.py  test_match_state.py  test_tooltip_formatter.py  test_update.py  test_widgets.py
