[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "league-cast-assist"
version = "0.2.0"
description = "Native desktop companion app for League of Legends custom-game casters."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "LeagueCastAssist contributors" }
]
dependencies = [
  "httpx>=0.27,<1.0",
  "platformdirs>=4.2,<5.0",
  "psutil>=5.9,<8.0",
  "pydantic>=2.7,<3.0",
  "PySide6>=6.7,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
]
packaging = [
  "pyinstaller>=6.8,<7.0",
]

[project.scripts]
league-cast-assist = "league_cast_assist.app:main"
league-cast-assist-validate-static = "league_cast_assist.tools.validate_static_data:main"
league-cast-assist-audit-abilities = "league_cast_assist.tools.audit_ability_text:main"
league-cast-assist-audit-items = "league_cast_assist.tools.audit_item_text:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
